--- a/doc/patchqueue/image-magick-prereq.mdwn
+++ b/doc/patchqueue/image-magick-prereq.mdwn
@@ -1,5 +1,9 @@
 The _img_ plugin is part of the default install and requires _Image::Magick_.
 
+> `img` is not enabled by default though. I don't want to list every module
+> that some plugin can use in there, only the ones in the default install
+> --[[Joey]]
+
 <pre>
 Index: Makefile.PL
 ===================================================================
