--- a/doc/bugs/edits_not_showing_up_in_compiled_pages.mdwn
+++ b/doc/bugs/edits_not_showing_up_in_compiled_pages.mdwn
@@ -15,3 +15,6 @@ exactly. --[[Joey]]
 >>> Yes, it seems to have happened again. Added debugging to track it
 >>> down next time it occurs. It seems to be happening when you add things
 >>> to patchqueue. --[[Joey]]
+
+>>> Got it, it seems that htperestradier was dying and this was killing
+>>> ikiwiki before it could save state filed && [[bugs/done]], for real this time. --[[Joey]]
