--- a/doc/patchqueue/datearchives-plugin.mdwn
+++ b/doc/patchqueue/datearchives-plugin.mdwn
@@ -63,3 +63,8 @@ This works (although accessing `%IkiWiki::pagectime` is not too clever), but it 
 >> Yeah, it wasn't much of a description, was it? ;-) It's an attempt to emulate the style of Wordpress and other popular blog platforms, which can link a post's creation date to  YYY/MM/DD archive pages, which then list all the relevant posts. My use-case is on a blog page which in-lines (via pagespecs) recent blog posts. 
 
 >> I agree with not adding this kind of functionality to the core. :-) I simply didn't want to have break links when I convert to IkiWiki. I guess I'll just play around with the page-creation thing myself then. Feel free to delete this from the queue. :-) --Ben
+
+>>> Ah, I get it, I hadn't realized it was making the date into a link.
+>>> No reason to delete this from the queue, it's a reasonable plugin. I
+>>> might move it to the contributed plugins directory as it's a bit
+>>> specialised to be included in ikiwiki though. --[[Joey]]
