--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,6 @@
 ikiwiki (1.44) UNRELEASED; urgency=low
 
-  * Patch to fix validaton of atom feeds by fixing the category tags.
+  * Patch by Ben to fix validaton of atom feeds by fixing the category tags.
   * Add a openidlogin-bg.gif to wikiicons and have the stylesheet use it for the
     OpenID login form rather than linking to a remote logo, to avoid various
     issues. Since there is not yet a license for the actual OpenID logo, this
