web commit by JoshTriplett: Mention HeVeA and similar.

--- a/doc/todo/latex.mdwn
+++ b/doc/todo/latex.mdwn
@@ -1,7 +1,9 @@
 How about a plugin adding a
 [[preprocessor_directive|preprocessordirective]] to render some given LaTeX
-as a PNG via [[debpkg dvipng]] and include the resulting image in the page?
-Useful for mathematics, as well as for stuff like the LaTeX version of the
-ikiwiki [[/logo]].
+and include it in the page?  This could either render the LaTeX as a PNG via
+[[debpkg dvipng]] and include the resulting image in the page, or perhaps
+render via [HeVeA](http://pauillac.inria.fr/~maranget/hevea/index.html) or
+similar. Useful for mathematics, as well as for stuff like the LaTeX version
+of the ikiwiki [[/logo]].
 
 [[tag soc]]
