--- a/doc/patchqueue/index.html_allowed.mdwn
+++ b/doc/patchqueue/index.html_allowed.mdwn
@@ -274,6 +274,12 @@ I'll attach an updated and slightly modified version below.
   >> Can someone elaborate on this? What's broken about it? Will pages
   >> foo/index/index.html include foo/index in their parentlinks? --Ethan
 
+  >>> Presently the patch does not move `foo/index.type` as `foo/index/index.html`, but renders
+  >>> it as `foo/index.html`, not because I particularly want that (except for the top-level one, of
+  >>> course), but because it could be done :). This, however, conflicts with a `foo.mdwn`
+  >>> rendered as `foo/index.html`. The easiest and cleanest way to do this, is to simply
+  >>> not handle `index` in such a special manner -- except for the top-level one. --[[tuomov]]
+
 * This does make the resulting wikis much less browsable directly on the
   filesystem, since `dir` to `dir/index.html` conversion is only handled by web
   servers and so you end up browsing to a directory index all the time.
@@ -289,6 +295,12 @@ I'll attach an updated and slightly modified version below.
      >> It's optional for *now* ... I suppose that I could make adding the
      >> index.html yet another option. I'm not _that_ fond of optioons
      >> however. --[[Joey]]
+
+     >>> It is worth noting, that with this patch, you _can_ render the local
+     >>> copy in the present manner, while rendering the Web copy under
+     >>> directories. So no extra options are really needed for local browsing, 
+     >>> unless you also want to serve the same copy over the Web, which I
+     >>> doubt. --[[tuomov]]
 
 * Some of the generated links are missing the trailing / , which is
   innefficient since it leads to a http redirect when clicking on that
