--- a/doc/soc.mdwn
+++ b/doc/soc.mdwn
@@ -10,4 +10,4 @@ List of Projects
 
 This list includes pages, such as [[/todo]] items, tagged `soc`.  If you have a great idea for an ikiwiki project not on this list, please file it as a todo item, and ask us if it might work as a Summer of Code project, but please don't add the `soc` tag yourself.
 
-[[inline pages="link(soc) and !todo/done and !link(todo/done) and !bugs/done and !link(bugs/done) and !*/Discussion" actions=no show=0]]
+[[inline pages="link(soc) and !todo/done and !link(todo/done) and !bugs/done and !link(bugs/done) and !*/Discussion" actions=yes show=0]]
