--- a/doc/soc/application.mdwn
+++ b/doc/soc/application.mdwn
@@ -41,13 +41,13 @@ Based on ["What should a mentoring organization application look like?"](http://
 8. **What is the main development mailing list for your organization?**
 
     The ikiwiki project strongly encourages collaboration through ikiwiki itself, and thus does not have a mailing list.
-    Anyone can create an account on ikiwiki's own ikiwiki.  ikiwiki provides a bug tracker, a TODO list, and the ability
+    Anyone can create an account on ikiwiki's own wiki.  ikiwiki provides a bug tracker, a TODO list, and the ability
     to create a weblog on any page.  ikiwiki also includes "discussion" sub-pages on every page.  The developers and mentors
-    monitor RecentChanges closely, both via the webpage and and will respond in a timely fashion.
+    monitor RecentChanges closely, both via the webpage and email and and will respond in a timely fashion.
 
 9. **What is the main IRC channel for your organization?**
 
-    #ikiwiki on OFTC.
+    `#ikiwiki` on OFTC.
 
 10. **Does your organization have an application template you would like to see students use? If so, please provide it now.**
 
