--- a/doc/news/irc_channel.mdwn
+++ b/doc/news/irc_channel.mdwn
@@ -3,4 +3,4 @@ Ikiwiki now has an IRC channel: `#ikiwiki` on irc.oftc.net
 The channel features live commit messages for CIA for changes to both
 ikiwiki's code and this wiki. Plus occasoinal talk about ikiwiki.
 
-Thanks to [[JoshTripplett]] for making this happen.
+Thanks to [[JoshTriplett]] for making this happen.
