--- a/doc/soc/application.mdwn
+++ b/doc/soc/application.mdwn
@@ -2,7 +2,7 @@ Based on ["What should a mentoring organization application look like?"](http://
 
 1. **Describe your organization.**
 
-    The ikiwiki project aims to develop a general-purpose wiki, with particular emphasis on personal wikis, project wikis, blogs, and collaborative software development.  We provide several features unique or uncommon amongst wikis:
+    The ikiwiki project aims to develop a general-purpose wiki engine, with particular emphasis on personal wikis, project wikis, blogs, and collaborative software development.  We provide several features unique or uncommon amongst wikis:
 
     * Rather than inventing yet another simplistic, linear revision control system, ikiwiki makes use of standard version control systems such as [[Subversion]] and [[Git]].  You can edit a wiki by committing to your repository, as well as through a traditional web interface.  This makes ikiwiki ideal for collaborative software development; just keep your wiki in version control next to your software.  You can also take advantage of the features of these systems; for instance, you can keep a local branch of your wiki via [[Git]].
 
