web commit by JoshTriplett: Typo: s/occasoinal/occasional/

--- a/doc/news/irc_channel.mdwn
+++ b/doc/news/irc_channel.mdwn
@@ -1,6 +1,6 @@
 Ikiwiki now has an IRC channel: `#ikiwiki` on irc.oftc.net
 
 The channel features live commit messages for CIA for changes to both
-ikiwiki's code and this wiki. Plus occasoinal talk about ikiwiki.
+ikiwiki's code and this wiki. Plus occasional talk about ikiwiki.
 
 Thanks to [[JoshTriplett]] for making this happen.
