--- a/doc/soc/application.mdwn
+++ b/doc/soc/application.mdwn
@@ -47,7 +47,7 @@ Based on ["What should a mentoring organization application look like?"](http://
 
 9. **What is the main IRC channel for your organization?**
 
-    `#ikiwiki` on OFTC.
+    `#ikiwiki` on OFTC (`irc.oftc.net`).
 
 10. **Does your organization have an application template you would like to see students use? If so, please provide it now.**
 
